--- a/stemplet bloger/mode-book.html
+++ b/stemplet bloger/mode-book.html
@@ -18,26 +18,51 @@
     <div class="mb-main">
         <div class="konten" >
             <div class="mb-head"><h1>جدول الاول</h1></div>
+            <div class="navig"><ul>
+                <li>item1</li>
+                <li>item2</li>
+                <li>item3</li>
+            </ul></div>
             <div class="mb-body"><p>ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini <span>بسم الله الرحمن الرحيم</span> isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan </p></div>
             <hr>
         </div>
         <div class="konten" >
             <div class="mb-head"><h1>جدول الثاني</h1></div>
+            <div class="navig"><ul>
+                <li>item1</li>
+                <li>item2</li>
+                <li>item3</li>
+            </ul></div>
             <div class="mb-body"><p>ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini <span>بسم الله الرحمن الرحيم</span> isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan </p></div>
             <hr>
         </div>
         <div class="konten" >
             <div class="mb-head"><h1>جدول الثالث</h1></div>
+            <div class="navig"><ul>
+                <li>item1</li>
+                <li>item2</li>
+                <li>item3</li>
+            </ul></div>
             <div class="mb-body"><p>ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini <span>بسم الله الرحمن الرحيم</span> isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan </p></div>
             <hr>
         </div>
         <div class="konten" >
             <div class="mb-head"><h1>جدول الرابع</h1></div>
+            <div class="navig"><ul>
+                <li>item1</li>
+                <li>item2</li>
+                <li>item3</li>
+            </ul></div>
             <div class="mb-body"><p>ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini <span>بسم الله الرحمن الرحيم</span> isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan </p></div>
             <hr>
         </div>
         <div class="konten" >
             <div class="mb-head"><h1>جدول الخامس</h1></div>
+            <div class="navig"><ul>
+                <li>item1</li>
+                <li>item2</li>
+                <li>item3</li>
+            </ul></div>
             <div class="mb-body"><p>ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini <span>بسم الله الرحمن الرحيم</span> isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan </p></div>
             <hr>
         </div>
