--- a/stemplet bloger/mode-book.html
+++ b/stemplet bloger/mode-book.html
@@ -17,13 +17,18 @@
     </div>
     <div class="mb-main">
         <div class="konten" >
-            <div class="mb-head"><h1>جدول الاول</h1></div>
+            <div class="mb-head"><h1>المبحث الأول</h1></div>
             <div class="navig"><ul>
-                <li>item1</li>
-                <li>item2</li>
-                <li>item3</li>
+                <li><a href="#Kisim">الاسم</a></li>
+                <li><a href="#tanwin">التنوين </a></li>
+                <li><a href="#Kfiil">الفعل</a></li>
+                <li><a href="#Kharaf">الحرف</a></li>
             </ul></div>
-            <div class="mb-body"><p>ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini <span>بسم الله الرحمن الرحيم</span> isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan ini adalah isi pembahasan </p></div>
+            <div class="mb-body">
+                <p id="Kisim">
+                    <span>مَا دَلَّ عَلَى مَعْنًى فِي نَفْسِهِ غَيْرِ مُقْتَرِنٍ بِزَمَانٍ, كَخَالِدٍ وَ فَرَسٍ وَ عُصْفُوْرٍ وَ دَارٍ وَحِنْطَةٍ وَمَاءٍ</span>
+                </p>
+            </div>
             <hr>
         </div>
         <div class="konten" >
