menambh pitur di irib aiquran

--- a/irobquran.html
+++ b/irobquran.html
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+    <div class="ro">
+        <div class="manjal">
+            <p>مكية</p>
+        </div>
+        <div class="ism">
+            <p>سورة الفاتحة</p>
+        </div>
+        <div class="adad">
+            <p>سبع آية</p>
+        </div>
+    </div>
     <div class="surat">
         <div class="ayat">
             <span class="irob">بِسْمِ
