--- a/stemplet bloger/asli/index.html
+++ b/stemplet bloger/asli/index.html
@@ -10,12 +10,11 @@
 
 <body>
     <div class="atas">
-        <div class="atas-title">
-            <h3>Kobong118</h3>
-        </div>
         <div class="atas-app" id="TappAtas">
             <img src="img/categories.png">
-            <span>Aplikasi</span>
+        </div>
+        <div class="atas-title">
+            <h3>Kobong118</h3>
         </div>
         <div class="atas-cari">
             <input type="text" placeholder="telusuri kobong..."><img src="img/search.png">
@@ -24,15 +23,15 @@
     </div>
     <div class="atas-menu" id="MenuAtas">
         <div class="atas-menu-item">
-            <div class="item1">
+            <div class="item it1">
                 <img src="img/icon-app.png">
             <a href="#">Iman</a>
             </div>
-            <div class="item2">
+            <div class="item it2">
                 <img src="img/icon-app.png">
             <a href="#">Islam</a>
             </div>
-            <div class="item3">
+            <div class="item it3">
                 <img src="img/icon-app.png">
             <a href="#">Ihsan</a>
             </div>
